@@ -28,6 +28,7 @@ $ -> Language fix or change
 01-Jun-2013 Michael Babker
  # [#31057] Missing Read More Button in editing articles.  Thanks Hans Kuijpers
  # [#30909] Batch process modules doesnt allow new module positions.  Thanks Chad Windnagle
+ # [#31039] Error when a 'Manager' deletes a category.  Thanks Tobias Zulauf
 
 24-May-2013 Michael Babker
  + [#31004] Add JTwitter package to /libraries/joomla.  Thanks Diana Prajescu
